# kiosk-flow

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  envoy.yaml  fly.toml  kiosk-master-plan.md
backend/: Cargo.toml  build_output.txt  build_output_2.txt  build_output_3.txt  build_output_4.txt  build_output_5.txt  build_output_6.txt  build_output_7.txt  build_output_8.txt  check.json  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_utf8.txt  check_output_utf8_2.txt  check_output_utf8_3.txt  errors.txt
backend/.sqlx/: query-01d6d1dacee976147957a83e3a6a50e31309710eba704addfcc20dd4c58eea45.json  query-046fd913a4880ae727294077cd1e2fb5a1f4dd129d30128c05012171f1a9d03f.json  query-0789fc762b5e3fcc9e1f87a593314bcc23915ca692237bd5b51c7f59d4af4f4b.json  query-0809fea69c2f2a01e0f3d350f4b702260acd46fd0813a060024b50ee5ceba243.json  query-09ba9c52d0c04d5cd2f5ab27c4f98a6c355242c3df9855545c488a1286867c6f.json  query-0d22cbb54e5a8f423e7c5009f2ffc007fc90bfebe703cfac764c78df67f37985.json  query-100245d82d01af74c9186951f305dac106fb2c89ceb81fbd5062be116746d01f.json  query-107cf7961519d1a94a8f6cdb859eb01994294cbd7b9a9ea94743103f2d8a728c.json  query-135a81598f3057b9f0c09b5a74e5d113cd0d9b63429cf877d2a9805a5f8719b4.json  query-13a6a826464dff693845b1283906396c23d176da966e38cde251d49999ac8f35.json  query-15387aff1a20602a41a8f5ab1af84143860b14d510ac7d2c6c3ed6813452267d.json  query-1a4e226770fe03e3c29e6bd7692f19827a36050cf5dd20eda34a165814a007e1.json  query-1cde32ac518998af8bba038088b13e3cf9dde960cfb0c3f03740c7749cc786a8.json  query-1da988b5be79f4c38249eb9bf55df5b87b269f40e127fd2f2a2b99a4460d249c.json  query-21a1666031c930bd4de2231623609de27bc1fbd619ed3cffbd93e1306b15d126.json  query-23ca01108b51d3336a06b278fbb8e344fb14d278165cd7b312785ee8878e9ab0.json  query-249c862a250f9d1dba17b03915399f9b2fe416d801401726d59b6e2ceb9739a3.json  query-255a1140bf947575028a1072a3cb31c50f09a58da06511d935093b7835cde47f.json  query-28c2aa9eb2e790e79df1a899cc1fac89a4360ddf51d53793fb8a40d9c81e8c88.json  query-2c0670b8c3f6a38cd1b466ceb05c0705cd4dc3f607be09822303850b8ff34154.json  query-33a5d96500807ae335fbc98f8b2fdc7f077d4d11814755f6f5b2ebc36b1b35e3.json  query-37223107ded4dbc65ebdd887ff5c312f66474a6c2b18559e08e70cd7c7d6c489.json  query-464bb9c95698cdfd801c438eb2b2aff70893dbd813f96dedad4db287909131b3.json  query-483cd207a3c9132946b103b5098ef6b3d91c522fa9daab41a3ea08293b7eabc3.json  query-4c288e6e6f5cf3f6ff3f5989481845784c6581cc5f350716d01a2ed35c6b0c5e.json  query-4c4e25145b9d65f9d75cadb44fd5360930a8e00f85f481a5b9aac7aa3614b5b4.json  query-50bcddd10d38c0210d2e7b0264335db36aac85cd0fd270b98e7ae8a40f465dcc.json  query-52f27bf197c01d5a23afe40462033b999011ddbf91928262e7cdb6069e66adc0.json  query-5355d9f79ddcd56026d6fdb9a4ed92e3098c443aedb98d1bfc317bfd3b18b763.json  query-551941d7d06cee50dcb5ceffc1685fe1bd3fc5a93a9af8886ff1d3cc50335bea.json  query-574771ddef290d7621982fc634d3bcb5c6f74c2222006b2dac811b664bfeee68.json  query-58bdaed8813280270ac4c170d8d7700d3075ebfa6432baa548712851363cb45f.json  query-5d7b8c4c289badc61ab1b46a35789cc64b7abbc4f10024a03ef605ad47bfc480.json  query-637b48f9755e265d81ae27b0fa520548c1130499f0a116052eda304e07a45568.json  query-64c10b105e0485478a8f203031be1c494f6473b5387c24f4ac0ca9813a04d69a.json  query-65e07f92c625c37ef5640cc873a88f74020deeed6e5327ba35e3866501b5ba19.json  query-65fe1ff69726a0caf0cfaa816ff3c5b6d37882ebee5188c36e8bb74ac31608cb.json  query-68f5905a2b99ce8a764818f1351e002f2b8aa839e8e0b995185065473ab685bd.json  query-6a83c52257acb4876909a87e28f58303d44ac14c685f69aa0127250eec60e803.json  query-6b3ba2f52bb80f4936497f5413c1619dbb997bc4ba772eabe27015d2b3bf61a4.json  (+75 more)
backend/migrations/: 0000_utils.sql  0001_initial_schema.sql  0002_core_entities.sql  0003_products.sql  0004_table_service.sql  0005_order_service.sql  0006_payment_service.sql  0007_inventory_service.sql  0008_crm_module.sql  0009_add_payment_created_by.sql  0010_system_settings.sql  0011_tenant_defaults_trigger.sql  0012_add_branch_active_status.sql  0013_ingredients.sql  0014_recipes.sql  0015_add_recipe_customization.sql  (+6 more)
(+242 files in other folders)
