[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/services",
    "crates/domain",
    "crates/infra",
    "crates/proto-gen",
]

[workspace.dependencies]
tonic = "0.12"
tonic-web = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "bigdecimal", "tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
redis = { version = "0.27", features = ["tokio-rustls-comp", "connection-manager"] }
bigdecimal = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"
tonic-reflection = "0.12"
http = "1.1"
sha2 = "0.10"
http-body = "1.0"
http-body-util = "0.1"
hex = "0.4"
bytes = "1.0"
tower = { version = "0.4", features = ["util"] }
