[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
sqlx = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
bigdecimal = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }