[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
sqlx = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
bigdecimal = { workspace = true }
sha2 = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"

[dev-dependencies]