[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
proto-gen = { path = "../proto-gen" }
services = { path = "../services" }
infra = { path = "../infra" }
tonic = { workspace = true }
tonic-web = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
tonic-reflection = { workspace = true }
domain = { path = "../domain" }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
axum = "0.7.9"
serde = { workspace = true }
serde_json = { workspace = true }


